// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management upload form component renders loading icon 1`] = `
<header
  class="row-content-block border-top-0 pt-2 pb-2 pl-0 pr-0 d-flex"
>
  <div
    class="ml-auto"
  >
    <glbutton-stub
      disabled="true"
      variant="primary"
    >
      
      Upload new designs
      
      <glloadingicon-stub
        class="ml-1"
        color="orange"
        inline="true"
        label="Loading"
        size="sm"
      />
    </glbutton-stub>
     
    <input
      accept="image/*"
      class="hide"
      name="design_file"
      type="file"
    />
  </div>
</header>
`;

exports[`Design management upload form component renders upload design button 1`] = `
<header
  class="row-content-block border-top-0 pt-2 pb-2 pl-0 pr-0 d-flex"
>
  <div
    class="ml-auto"
  >
    <glbutton-stub
      variant="primary"
    >
      
      Upload new designs
      
      <!---->
    </glbutton-stub>
     
    <input
      accept="image/*"
      class="hide"
      name="design_file"
      type="file"
    />
  </div>
</header>
`;
